--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 	<h1>Create Fancy New Menu Item</h1>
+	<h2>{{restaurant.name}}</h2>
 
 	<form action="{{url_for('newMenuItem', restaurant_id=restaurant.id )}}" method = 'POST'>
 
