--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -5,6 +5,12 @@
 
 	<p>Name:</p>
 	<input type = 'text' size='30' name = 'name' placeholder = '{{item.name}}'>
+	<p>Description:</p>
+	<input type = 'text' size='30' name = 'description' placeholder = '{{item.description}}'>
+	<p>Price:</p>
+	<input type = 'text' size='30' name = 'price' placeholder = '{{item.price}}'>
+	<p>Course:</p>
+	<input type = 'text' size='30' name = 'course' placeholder = '{{item.course}}'>
 
 	<input type='submit' value='Edit'>
 	</form>
