--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -9,16 +9,18 @@
 		<div>
 			<h3>{{restaurant.name}}</h3>
 
-			{% if items|length %}
+			{% if items|length%}
 			{% for i in items %}
+				{% if i.restaurant_id == restaurant.id %}
 				<div>{{i.name}}</div></br>
 				<div><i>{{i.description}}</i></div></br>
 				<div>{{i.price}}</div></br></br>
+				{% endif %}
 			{% endfor %}
 			{% else %}
 				<div>There's nothing on the menu! What are you serving, air?? Not fancy!</div>
 			{% endif %}
-
+			<a href='{{url_for('showMenu',restaurant_id = restaurant.id)}}'>View Menu</a>
 		</div>
 		{% endfor %}
 		{% else %}
