--- a/templates/deletemenuitem.html
+++ b/templates/deletemenuitem.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 <body>
 	<h1>Delete a Not-So-Fancy Menu Item</h1>
 	<form action= "{{url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}" method = 'POST'>
