--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 <body>
 	<h1>Create Fancy New Menu Item</h1>
 	<h2>{{restaurant.name}}</h2>
